Fixed #5 alignment problems.
Had put the lead a div too deep

--- a/styles/page-poverty.less
+++ b/styles/page-poverty.less
@@ -53,6 +53,8 @@
     cite {
       position: absolute;
       padding-left: @panel-body-padding;
+      padding-right: @panel-body-padding;
+      margin-top: 4px;
       bottom: 5px;
 
       font-size: @font-size-small;
